# wl-pprint-text

./: .gitignore  .travis.yml  Changelog.md  wl-pprint-text.cabal
.github/workflows/: haskell-ci.yml
Text/PrettyPrint/Leijen/: Text.hs
Text/PrettyPrint/Leijen/Text/: Lazy.hs  Monadic.hs
Text/PrettyPrint/Leijen/Text/Lazy/: Monadic.hs
