Name:                wl-pprint-text
Version:             1.0.0.0
Synopsis:            A Wadler/Leijen Pretty Printer for Text values
Description:         A clone of wl-pprint for use with the text library.
License:             BSD3
License-file:        LICENSE
Author:              Ivan Lazar Miljenovic
Maintainer:          Ivan.Miljenovic@gmail.com
Copyright:           2007 Daan Leijen, 2010 Ivan Lazar Miljenovic
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Text.PrettyPrint.Leijen.Text, 
                       Text.PrettyPrint.Leijen.Text.Monadic
  Build-depends:       base < 5,
                       text >= 0.8.0.0 && < 0.11.0.0
